--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-ATLAS_URI=mongodb+srv://machavez2011:DdWZUfg6D375wrH4@cluster0.b9omb.mongodb.net/<dbname>?retryWrites=true&w=majority
+ATLAS_URI=mongodb+srv://machavez2011:DdWZUfg6D375wrH4@cluster0.b9omb.mongodb.net/workout-tracker?retryWrites=true&w=majority
